--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -153,3 +153,14 @@
 	\label{fig:kosselgaasmean}
 \end{figure}
 
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.55\textwidth}
+		\includegraphics[width=\linewidth]{images/gaas2_overview.pdf}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.4\textwidth}
+		\includegraphics[width=\linewidth]{images/gaas2_zoom.pdf}
+	\end{subfigure}
+	\caption[Results GaAs Sample 2]{Result of the $g^2$  calculation for a GaAs single crystal (GaAs Sample 2).  MIP from $q_z$=0\,nm$^{-1}$ to 0.3\,nm$^{-1}$. Marked areas in the overview on the left around expected positions of Bragg peaks are shown in detail on the right (labeled by the corresponding Laue indices). No Bragg peaks are  clearly distinguishable in the result.}
+	\label{fig:resgaas2}
+\end{figure}
