--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1137,6 +1137,20 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   doi     = {10.1109/10.678605},
 }
 
+@Article{yabashi2015,
+  author   = {Yabashi, Makina and Tanaka, Hitoshi and Ishikawa, Tetsuya},
+  journal  = {Journal of Synchrotron Radiation},
+  title    = {{Overview of the SACLA facility}},
+  year     = {2015},
+  month    = {May},
+  number   = {3},
+  pages    = {477--484},
+  volume   = {22},
+  abstract = {In March 2012, SACLA started user operations of the first compact X-ray free-electron laser (XFEL) facility. SACLA has been routinely providing users with stable XFEL light over a wide photon energy range from 4 to 15keV and an ultrafast pulse duration below 10fs. The facility supports experimental activities in broad fields by offering high-quality X-ray optics and diagnostics, as well as reliable multiport charge-coupled-device detectors, with flexible experimental configurations. A two-stage X-ray focusing system was developed that enables the highest intensity of 10${\sp 20}$Wcm${\sp {$-$}2}$. Key scientific results published in 2013 and 2014 in diverse fields are reviewed. The main experimental systems developed for these applications are summarized. A perspective on the facility upgrade is presented.},
+  doi      = {10.1107/S1600577515004658},
+  keywords = {X-ray free-electron laser, beamline instrumentation, X-ray optics, ultrafast X-ray science, quantum X-ray optics},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
