--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -40,10 +40,10 @@ An avenue for improvement is subpixel resolution of the photon hits and better u
 \end{subfigure}
 \begin{subfigure}[b]{0.37\textwidth}
 	\includegraphics[width=\linewidth]{images/lv65simB.pdf}
-	\caption{AAO Membranes}
+	\caption{AAO membrane  }
 	\label{fig:outlook_aao}
 \end{subfigure}
-\caption[Simulations in Preparation of LV65 Experiment]{Examples of simulations performed with the tools developed in this thesis in preparation of an additional experiment (LV65) at the LCLS free electron laser.}
+\caption[Simulations in Preparation of LV65 Experiment]{Examples of simulations performed with the tools developed in this thesis in preparation of the LCLS free electron laser experiment LV65, which will use nano-gratings and AAO membranes with metal filled self-organized pores as samples for an IDI measurement. The simulations were used to chose an optimized sample geometry and to estimate the feasibility with respect to the expected SNR. The images shown are the calculated fluorescence intensity correlations between pixels of a quarter of an Jungfrau 4M detector placed at a distance of 70\,cm (grating) and 1\,m (membrane) respectively. The simulated grating has a pitch of 80\,nm, 40\,nm line width and 40\,nm thickness; 20\% excitation and 4 modes were simulated. The AAO membrane has and inter pore distance 105\,nm, the pores are filled with vanadium and 20\% excitation are assumed. For both samples, the average over 100 images is shown.}
 \end{figure}
 
 Upcoming experiment using sub-1\,fs pulse length as LCLS. 
