--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -262,7 +262,7 @@ The detector shift is corrected before calculating the correlations, the rotatio
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
-	\caption{Program for fitting Kossel lines to experimental data}
+	\caption{User interface for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
 	\label{fig:kosselfit}
 \end{figure}
 
