--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1151,6 +1151,32 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   keywords = {X-ray free-electron laser, beamline instrumentation, X-ray optics, ultrafast X-ray science, quantum X-ray optics},
 }
 
+@Article{mojarad2015,
+  author    = {Mojarad, N. and Hojeij, M. and Wang, L. and Gobrecht, J. and Ekinci, Y.},
+  journal   = {Nanoscale},
+  title     = {Single-digit-resolution nanopatterning with extreme ultraviolet light for the 2.5 nm technology node and beyond},
+  year      = {2015},
+  pages     = {4031-4037},
+  volume    = {7},
+  abstract  = {All nanofabrication methods come with an intrinsic resolution limit{,} set by their governing physical principles and instrumentation. In the case of extreme ultraviolet (EUV) lithography at 13.5 nm wavelength{,} this limit is set by light diffraction and is ≈3.5 nm. In the semiconductor industry{,} the feasibility of reaching this limit is not only a key factor for the current developments in lithography technologies{,} but also is an important factor in deciding whether photon-based lithography will be used for future high-volume manufacturing. Using EUV-interference lithography we show patterning with 7 nm resolution in making dense periodic line-space structures with 14 nm periodicity. Achieving such a cutting-edge resolution has been possible by integrating a high-quality synchrotron beam{,} precise nanofabrication of masks{,} very stable exposures instrumentation{,} and utilizing effective photoresists. We have carried out exposure on silicon- and hafnium-based photoresists and we demonstrated the extraordinary capability of the latter resist to be used as a hard mask for pattern transfer into Si. Our results confirm the capability of EUV lithography in the reproducible fabrication of dense patterns with single-digit resolution. Moreover{,} it shows the capability of interference lithography{,} using transmission gratings{,} in evaluating the resolution limits of photoresists.},
+  doi       = {10.1039/C4NR07420C},
+  issue     = {9},
+  publisher = {The Royal Society of Chemistry},
+}
+
+@Article{carina2019,
+  author         = {Lim, Siew Yee and Law, Cheryl Suwen and Liu, Lina and Markovic, Marijana and Hedrich, Carina and Blick, Robert H. and Abell, Andrew D. and Zierold, Robert and Santos, Abel},
+  journal        = {Catalysts},
+  title          = {Electrochemical Engineering of Nanoporous Materials for Photocatalysis: Fundamentals, Advances, and Perspectives},
+  year           = {2019},
+  issn           = {2073-4344},
+  number         = {12},
+  volume         = {9},
+  abstract       = {Photocatalysis comprises a variety of light-driven processes in which solar energy is converted into green chemical energy to drive reactions such as water splitting for hydrogen energy generation, degradation of environmental pollutants, CO2 reduction and NH3 production. Electrochemically engineered nanoporous materials are attractive photocatalyst platforms for a plethora of applications due to their large effective surface area, highly controllable and tuneable light-harvesting capabilities, efficient charge carrier separation and enhanced diffusion of reactive species. Such tailor-made nanoporous substrates with rational chemical and structural designs provide new exciting opportunities to develop advanced optical semiconductor structures capable of performing precise and versatile control over light&ndash;matter interactions to harness electromagnetic waves with unprecedented high efficiency and selectivity for photocatalysis. This review introduces fundamental developments and recent advances of electrochemically engineered nanoporous materials and their application as platforms for photocatalysis, with a final prospective outlook about this dynamic field.},
+  article-number = {988},
+  doi            = {10.3390/catal9120988},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
