--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -28,7 +28,7 @@ Even just the ability to image to focal volume might be an useful diagnostic too
 	\centering
 	\includegraphics[width=\linewidth]{images/lv65_vanadium.pdf}
 	\label{fig:outlook_vanadium}
-	\caption[Focus finding using IDI]{Preliminary results of the $g^2(\vec{q})$ calculation of the fluorescence of a 4\,um vanadium foil, placed at 4 different positions along the x-ray beam at the CXI experimental hutch (LCLS, running in an experimental configuration for short pulse duration under 1\,fs \cite{argosecond}) using the "100 nm" KB focusing (optimal theoretical focus size 90\,nm x 150\,nm, theoretical beam divergence 2 mrad x 1 mrad) on one tile of a Jungfrau detector (75\,um pixelsize, placed 480\,mm downstream of the sample). The axis are in detector pixels. Shown are averages over ~2000 shots with minimal shot based filtering. The position captioned "0" was determined during the experiment as the focus based on these results, the other positions are 250\,um and 500\,um further downstream and 250\,um upstream (this position was previously determined as the focus by imprints).  Some astigmatism is visible.}
+	\caption[Focus finding using IDI]{Preliminary results of the $g^2(\vec{q})$ calculation of the fluorescence of a 4\,um vanadium foil, placed at 4 different positions along the x-ray beam at the CXI experimental hutch (LCLS, running in an experimental configuration for short pulse duration under 1\,fs \cite{subfs2017,argosecond}) using the "100 nm" KB focusing (optimal theoretical focus size 90\,nm x 150\,nm, theoretical beam divergence 2 mrad x 1 mrad) on one tile of a Jungfrau detector (75\,um pixelsize, placed 480\,mm downstream of the sample). The axis are in detector pixels. Shown are averages over ~2000 shots with minimal shot based filtering. The position captioned "0" was determined during the experiment as the focus based on these results, the other positions are 250\,um and 500\,um further downstream and 250\,um upstream (this position was previously determined as the focus by imprints).  Some astigmatism is visible.}
 \end{figure}
 
 \section{Experimental Improvements}
