--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1177,6 +1177,66 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   doi            = {10.3390/catal9120988},
 }
 
+@Article{subfs2017,
+  author    = {Huang, S. and Ding, Y. and Feng, Y. and Hemsing, E. and Huang, Z. and Krzywinski, J. and Lutman, A. A. and Marinelli, A. and Maxwell, T. J. and Zhu, D.},
+  journal   = {Phys. Rev. Lett.},
+  title     = {Generating Single-Spike Hard X-Ray Pulses with Nonlinear Bunch Compression in Free-Electron Lasers},
+  year      = {2017},
+  month     = {Oct},
+  pages     = {154801},
+  volume    = {119},
+  doi       = {10.1103/PhysRevLett.119.154801},
+  issue     = {15},
+  numpages  = {6},
+  publisher = {American Physical Society},
+}
+
+@InBook{reimer2013,
+  author    = {Reimer, L.},
+  chapter   = {Fundamentals of Crystallography},
+  pages     = {269},
+  publisher = {Springer Berlin Heidelberg},
+  title     = {Transmission Electron Microscopy: Physics of Image Formation and Microanalysis},
+  year      = {2013},
+  isbn      = {9783662135532},
+  series    = {Springer Series in Optical Sciences},
+}
+
+@Article{morawiec2016,
+  author   = {Morawiec, A.},
+  journal  = {Journal of Applied Crystallography},
+  title    = {{A program for refinement of lattice parameters and strain determination using Kossel diffraction patterns}},
+  year     = {2016},
+  month    = {Feb},
+  number   = {1},
+  pages    = {322--329},
+  volume   = {49},
+  abstract = {The Kossel diffraction technique is well suited for investigating crystal lattices. Progress in digital recording of images opens the opportunity for simplification and improvement of the examination of Kossel patterns. Such patterns can be processed immediately after recording if appropriate computer programs are available. To provide such a tool, a new Windows-based software for computer-assisted analysis of Kossel patterns has been developed. With its easy-to-operate user interface, the program is intended to facilitate refinement of lattice parameters and determination of elastic strains. The refinement is based on matching experimental and geometrically simulated patterns, whereas the strain is obtained by matching Kossel line profiles in similar experimental patterns. The software is capable of simultaneous handling of multiple patterns.},
+  doi      = {10.1107/S1600576715024656},
+  keywords = {lattice parameters, X-ray diffraction, residual strain, orientation mapping, scanning electron microscopy},
+}
+
+@Article{morris1968,
+  author  = {Morris,William G.},
+  journal = {Journal of Applied Physics},
+  title   = {Crystal Orientation and Lattice Parameters from Kossel Lines},
+  year    = {1968},
+  number  = {3},
+  pages   = {1813-1823},
+  volume  = {39},
+  doi     = {10.1063/1.1656436},
+}
+
+@Article{herron2018,
+  author  = {Herron, Adam and Coleman, Shawn and Dang, Khanh and Spearot, Douglas and Homer, Eric},
+  journal = {MethodsX},
+  title   = {Simulation of kinematic Kikuchi diffraction patterns from atomistic structures},
+  year    = {2018},
+  month   = {09},
+  volume  = {5},
+  doi     = {10.1016/j.mex.2018.09.001},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
