--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -186,19 +186,19 @@
 
 
 %float positionierung
- %\renewcommand{\topfraction}{0.9}	% max fraction of floats at top
- %\renewcommand{\bottomfraction}{0.9}	% max fraction of floats at bottom
+ \renewcommand{\topfraction}{0.9}	% max fraction of floats at top
+ \renewcommand{\bottomfraction}{0.9}	% max fraction of floats at bottom
  %   Parameters for TEXT pages (not float pages):
- %\setcounter{topnumber}{3}
- %\setcounter{bottomnumber}{1}
- %\setcounter{totalnumber}{4}     % 2 may work better
- %\setcounter{dbltopnumber}{2}    % for 2-column pages
- %\renewcommand{\dbltopfraction}{0.9}	% fit big float above 2-col. text
- %\renewcommand{\textfraction}{0.07}	% allow minimal text w. figs
+ \setcounter{topnumber}{3}
+ \setcounter{bottomnumber}{2}
+ \setcounter{totalnumber}{4}     % 2 may work better
+ \setcounter{dbltopnumber}{2}    % for 2-column pages
+ \renewcommand{\dbltopfraction}{0.9}	% fit big float above 2-col. text
+ \renewcommand{\textfraction}{0.07}	% allow minimal text w. figs
  %   Parameters for FLOAT pages (not text pages):
- %\renewcommand{\floatpagefraction}{0.7}	% require fuller float pages
+ \renewcommand{\floatpagefraction}{0.7}	% require fuller float pages
  % N.B.: floatpagefraction MUST be less than topfraction !!
- %\renewcommand{\dblfloatpagefraction}{0.7}	% require fuller float pages
+ \renewcommand{\dblfloatpagefraction}{0.7}	% require fuller float pages
 
 %chemische summenformel
 \newcommand*\chem[1]{\ensuremath{\mathrm{#1}}}
