--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -248,6 +248,7 @@ If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled 
 	\right)^{-k}
 	\left( 1+\overline{I}
 	\right)^{-M}
+	\label{eq:negbinomialdist}
 \end{equation}
 with mean $\mu=M\overline{I}$ and variance $\mu+\frac{\mu^2}{M}$ (which is higher than the variance of the Poisson distribution $\mu$ ).
 
@@ -261,12 +262,6 @@ as an estimation for the number of modes.
 If $p(1)$ and $p(2)$ are estimated as $p'_1$ and $p'_2$ based on the frequency in experimental observations, the uncertainty of the mode estimate can be estimated as 
 $\Delta M \lesssim \frac{2 p'_1}{\left({p'_1}^2+2 (p'_1-1) p'_2\right)^2} \left(\Delta p'_1 (2-p'_1) p'_2+\Delta p'_2 (1-p'_1) p'_1\right)$.
 
-The variance of a product of (uncorrelated) photon counts following this distribution will have a variance of
-\begin{equation}
-	\Var_{p\cdot p}= \Var_p^2 +2 \mu^2\Var_p	= \mu^4 \frac{2 M + 1}{M^2 + 2}+ \mu^3 \frac{M+1}{M} + \mu^2 \,.
-\end{equation}
-
-Following the idea of Trost et. al, this can be used so estimate the noise of an intensity correlation measurement, even though the actual signal will break the assumption of having uncorrelated photon counts \cite{trost2020}.
 
 
 \section{Signal to Noise Considerations}
@@ -326,7 +321,7 @@ K(t)&=\int_{-\infty}^\infty \frac{1}{4
 \end{align}
 with the scaled complementary error function\footnote{To numerically evaluate \fref{eq:mgauss}, \fref{eq:pfull} and integrals involving them, the introduction of the scaled complementary error function and switching to a sufficient approximation is beneficial to avoid under- or overflow of the numerical representation of either the exponential or the error function term.} $\erfcx(x)=e^{x^2}\erfc(x)\stackrel{x\gg1}{\approx}  \frac{1}{\sqrt{\pi}x}$
    \cite{ren2007}.
-The number of degrees of freedom, $M_{t,\text{Conv}}=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right]^{-1}$  can then be numerically evaluated   for a Lorentzian spectrum as shown in \fref{fig:theorymodes}.
+The number of degrees of freedom, $M_{t,\text{Conv}}=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right]^{-1}$  can then be numerically evaluated  for a Lorentzian spectrum as shown in \fref{fig:theorymodes}.
 
 \begin{figure}
 	\centering
@@ -351,24 +346,26 @@ The number of degrees of freedom, $M_{t,\text{Conv}}=\left[\int_{-\infty}^{\inft
 
 The experimentally indistinguishable fluorescence energies $K_{\alpha,1}$ and $K_{\alpha,2}$ (as well as  $K_\beta$ if no filter is used for suppression) give additional independent modes $M_E$ depending on the relative intensity of the lines, with $M_E \lessapprox 2$ for the elements considered in this work (see \fref{tab:elements}).
 
-As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized and the incoherent field can be separated into two polarization modes, which are pairwise orthogonal with $\vec{k}$ and therefore change slightly for each atom and detector position. For small source dimensions, this change is negligible,  giving $M_P \approx 2$. 
+As the used X-ray detectors are polarization insensitive and the X-ray fluorescence is unpolarized, the incoherent field can be separated into two polarization modes with independent random phase, which are pairwise orthogonal with $\vec{k}$ and therefore change slightly for each atom and detector position. For small source dimensions, this change is negligible,  giving $M_P \approx 2$ \cite{classen2019}. 
 
 
-Path differences longer than the coherence length give additional modes $M_S$, therefore the speckle visibility will be reduced for large samples:
-This is for example important, if the exciting beam is not perpendicular to the detector (such as in an off-axis setup), as the excitation time difference between different parts of the a thick sample is not compensated for by the difference in flight time to the detector or in a wide angle experiment. In a small angle setup with a detector perpendicular to the beam, fluorescence from different emitters along the sample thickness will arrive at approximately equal time, hence the sample thickness does not introduce additional modes)
+Path differences longer than the coherence length give additional modes $M_S$, therefor the speckle visibility will be reduced for large samples:
+This is for example important, if the exciting beam is not perpendicular to the detector (such as in an off-axis setup), as the excitation time difference between different parts of the a thick sample is not compensated for by the difference in flight time to the detector or in a wide angle experiment. In a small angle setup with a detector perpendicular to the beam, fluorescence from different emitters along the sample thickness will arrive at approximately equal time, hence the sample thickness should not introduce additional modes). To illustrate this effect, simulations will be performed in \fref{chap:simulation}.
 
-
-If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the meassured signal will be spatially averaged giving independent spatial sampling modes $M_D$ \cite{goodman2007}.
-
-
-
-
+If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the measured signal will be spatially averaged giving independent spatial sampling modes $M_D$ \cite{goodman2007}.
 
 As an approximation, the total number of modes can be considered the product of those modes different numbers discussed above, even though in reality, the mode numbers are not completely independent.
-Therefore, in \fref{chap:simulation}  simulations under different conditions with experimentally feasible  parameters will be performed.
+Hence, in \fref{chap:simulation}  simulations under different conditions with experimentally feasible  parameters will be performed.
 
 
 \subsection{Noise}
+The variance of a product of (uncorrelated) photon counts following the negative binomial distribution \fref{eq:negbinomialdist} is
+\begin{equation}
+	\Var_{p\cdot p}= \Var_p^2 +2 \mu^2\Var_p	= \mu^4 \frac{2 M + 1}{M^2 + 2}+ \mu^3 \frac{M+1}{M} + \mu^2 \,.
+\end{equation}.
+Assuming no signal, this would describe the noise in the meassurment.
+As shown by Trost et. al, this can be used so estimate the inherent noise of an intensity correlation measurement up to small term, even though the actual signal will break the assumption of having uncorrelated photon counts \cite{trost2020}.
+
 %Which factors influence SNR -lifetime/pulsewidth -polarisation -sampling conditions / undersampling -sample thickness / coherence length -N images -N photons
 
 %- SNR
@@ -385,9 +382,9 @@ Therefore, in \fref{chap:simulation}  simulations under different conditions wit
 
 
 \section{Kossel Lines}
-X-Ray radiation originating from within a single crystal gets Bragg reflected at the lattice planes, causing Intensity variation in $90^o-\theta$ around the direction $k_{hkl}$, forming the \textit{Kossel Cones}. On the spherical detector centered at at the crystal, the points with influenced intensity would lie on circles with radii determined by ...
+X-Ray radiation  originating from within a single crystal (such as fluorescence) can get Bragg reflected at the lattice planes of the crystal, causing Intensity variation in $90^o-\theta$ around the direction $k_{hkl}$, forming the \textit{Kossel Cones} \cite{cowley1995}. On the spherical detector centered at at the crystal, the points with influenced intensity, the \textit{Kossel lines} (or in electron microscopy more commonly \text{Kikuchi Lines}) would hence lie on circles, for a flat detector on general conic sections (see \fref{fig:kossel} for an illustration).
 
-The visibility of the Kossel lines is governed by the same extinction rules as for the Bragg reflexes for, the structure factor $F_{hkl}$ has to be non-zero. For a zinc blende structure (such as GaAs) with atomic scattering factors $f_a$ and $f_b$, the structure factor is
+The visibility of the Kossel lines is governed by the same extinction rules as for the Bragg reflexes; the structure factor $F_{hkl}$ has to be non-zero. For a zinc blende structure (such as GaAs) with atomic scattering factors $f_a$ and $f_b$, the structure factor is
 \begin{align}
 F_{hkl} = \begin{cases}
 0, & \text{if $h$, $k$, $l$ mixed parity}.\\
@@ -395,24 +392,22 @@ F_{hkl} = \begin{cases}
 4(f_a\pm i f_b), & \text{if same parity and $h+k+l = 2 N+1$} \\
 4(f_a-f_b), & \text{if same parity and $h+k+l = 4 N+2$} \\
 \end{cases}
-\end{align}
+\end{align},
+resulting in strong Kossel lines if $h+k+l=4N$ \cite{reimer2013}.
 
-The structure of the intensity variations (both intense and less intense depends on the which case...
-If the fine structure cannot be resolved
+The fine structure of the intensity variations and whether they increase or decrease the intensity over the non-scattered fluorescence background depends furthermore on the viewing direction along the cone in relation to the orientation and crystal surface \cite{faigel2016}. If the fine structure cannot be resolved by the detector and only the presence, overall shape and position of the lines is considered, no distinction between these different cases has to be explicitly made.
 
-The Kossel lines allow to orient the detector with regards to the lattice planes. This can either be done by reprojecting the planar detector onto a sphere by an inverse gnomonic projection and determining circle center and radius, eg. by an Hugh-Transform, or by a fitting conic sections to the lines on the planar detector. As the observable curvature of the Kossel lines on the detector in an IDI setup is small and therefore the circles are difficult to determine, the second method will be used. 
+The Kossel lines allow to orient the detector with regards to the lattice planes. This can either be done by reprojecting the planar detector onto a sphere by an inverse gnomonic projection and determining circle center and radius, eg. by an Hugh-Transform, or by a fitting conic sections to the lines on the planar detector \cite{morris1968,morawiec2016,faigel2016,herron2018}. As the observable curvature of the Kossel lines on the detector in an IDI setup is small and therefore the circles are difficult to determine, the second method is preferable. 
 
 As each point identified as belonging to a Kossel line has to be part of a conic section of the same plane with each cone originating from the same point, each point $r$ on a line has to fulfill
-
-
 
 \begin{equation}
 \frac{\vec{r} \cdot \vec{q}}{\left|\vec{r}\right| \left| \vec{q}\right|} = \frac{\lambda}{2d}
 \end{equation}
- for a reciprocal lattice vector $q$ which is an element of the allow reflections $Q$. So finding the dector orientation can be seen as finding a rotation Matrix $R$ as
+ for a reciprocal lattice vector $\vec{q}$ which is an element of the allowed reflections $Q$. So finding the detector orientation can be seen as finding a rotation matrix $R$ as
 \begin{equation}
-\arg\!\min_{R} \sum_{r} \min_{q\in Q} \frac{2 d * \vec{r} \cdot \vec{Rq}}{\left|\vec{r}\right| \left| \vec{q}\right|} -\lambda
-\end{equation}
+\arg\!\min_{R} \sum_{r} \min_{q\in Q} \left\Vert \frac{2 d * \vec{r} \cdot \vec{Rq}}{\left|\vec{r}\right| \left| \vec{q}\right|} -\lambda \right\Vert_2^2
+\end{equation}.
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.25\textwidth}
