--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -155,11 +155,19 @@ As shown in \fref{fig:SNRNimages}, the SNR scales with  the square root of the i
 \subsection{Number of Modes}
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.4\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/modes_signal.pdf}
-		\caption{Signal dependence on number of modes}
+		\caption{Signal dependence on the number of modes}
 		\label{fig:modes}
 	\end{subfigure}
+	\hspace{0.02\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
+	\includegraphics[width=\linewidth]{images/SNRNimagesgrating.pdf}
+	\caption{SNR dependence on the number of modes and images}
+	\label{fig:Nimages}
+\end{subfigure}
+\caption[SNR dependence on the number of modes and images]{For a simulated crystal
+	(sc-structure, 200x200x500 atoms, 5\,\AA\,lattice constant, 2048x2048 detector with 100\,um pixelsize at 50\c,m, $10^4$ photons/image on the detector, 10\,keV) dependence of the signal (height of the peak) on the number of simulated modes shows approximately an $1/M$ relation.  The inset shows individual line profiles through a Bragg peak in the reconstruction. In (b), for a simulated Nickel grating (80\,nm pitch, 40\,nm thickness in a 200\,nm focus, 1024x1024 detector, 70\,cm) the dependence of the SNR on the number of images averaged over and modes fits the $\sqrt{N}/M$ relation, which is indicated by dashed lines.}
 \end{figure}
 
 \subsection{Undersampling and  Sample Size}
@@ -176,12 +184,13 @@ This results suggests, that for an experimental verification using Bragg peaks, 
 
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.4\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/SNRNatoms.pdf}
 		\caption{ SNR dependence on crystal size}
 		\label{fig:SNRNatoms}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.4\textwidth}
+	\hspace{0.02\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/detsize.pdf}
 		\caption{SNR dependence on detector size}
 		\label{fig:SNRdetsize}
